# rdc-proxy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  installer-smoke.yml  installer-vm.yml  publish.yml
docs/: ARCHITECTURE.md  PI-SETUP.md
install/: install.sh  rdc-proxy.service  setup-bridge.sh  uninstall.sh
rdc_proxy/: __main__.py  config.py  dashboard.py  doctor.py  mqtt.py  plugins.py  proxy.py  state.py  web.py  wire.py
rdc_proxy/templates/: status.html
tests/: conftest.py  test_config.py  test_dashboard.py  test_doctor.py  test_mqtt.py  test_plugins.py  test_proxy.py  test_state.py  test_wire.py
